// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`loader should work: assets 1`] = `
[
  "b6b33f1d72a9ab7505492869460d212f.png",
  "main.bundle.js",
]
`;

exports[`loader should work: errors 1`] = `[]`;

exports[`loader should work: result 1`] = `undefined`;

exports[`loader should work: warnings 1`] = `[]`;

exports[`loader with limit: assets 1`] = `
[
  "main.bundle.js",
]
`;

exports[`loader with limit: errors 1`] = `[]`;

exports[`loader with limit: result 1`] = `undefined`;

exports[`loader with limit: warnings 1`] = `[]`;
